Update Tensorflow Install instructions.ipynb

--- a/Tensorflow Install instructions.ipynb
+++ b/Tensorflow Install instructions.ipynb
@@ -26,6 +26,7 @@
     }
    },
    "source": [
+    "## https://www.youtube.com/watch?v=vxjbL5iN1XY&index=2&list=PLdxktq4Gyyka-FHTgc4PqpgYSTnlZK8xM",
     "## Overview\n",
     "\n",
     "- Step 1: Update your GPU driver (should be higher than version 390)\n",
@@ -78,6 +79,7 @@
     "sudo dpkg -i cuda-repo-ubuntu1704-9-0-local_9.0.176-1_amd64.deb\n",
     "sudo apt-key add /var/cuda-repo-9-0-local/7fa2af80.pub\n",
     "sudo apt-get update\n",
+    "sudo apt-get install -f\n",
     "sudo apt-get install cuda\n",
     "```\n",
     "- download patch 1 and install (you should get a prompt to install once its done downloading)\n",
